css/maya_numbers.css
body {
  width: 1280px;
}
div#wrapper {
  text-align: center;
  margin: 0 auto;
  width: 80%;
  padding: 0 18px;
}
p {
  font-size: 1.2em;
  text-align: left;
}

/* Layout */
div#instructions {
  margin-bottom: 2em;
  padding: .5em 1em;
  background: #F1F1F1;
  border-radius: 10px;
}
div#target_value,
div#bucket,
div#live_sum {
  float: left;
}
div#bucket {
  margin: 0 200px;
}
div#glyphs {
  clear: both;
  text-align: left;
}
div#help {
  clear: both;
  padding-top: 2em;
  text-align: left;
  cursor: pointer;
  color: blue;
  text-decoration: underline;
}

/* Content */
/* @TODO: Set fixed widths on elements in this div that change so things aren't so shifty */
#activity {
  float: left;
  width: 100%;
  height: 200px;
}
div#target_value {
  font-size: 5em;
}
div#live_sum {
  font-size: 3.5em;
  width: 100px;
}
div#total {
  font-weight: bold;
  border-top: 1px solid #000000;
}
#glyphs ul {
  clear: both;
  float: left;
  margin: 2em 0;
}
#glyphs li {
  list-style-type: none;
  float: left;
  margin: 10px 10px 6px 0;
}
#glyphs li#glyph-10 {
  clear: both;
}
#glyphs li img {
  height: 80px;
  width: 80px;
  cursor: pointer;
}
#bucket {
  width: 120px;
  height: 120px;
  background: #CDCDCD;
}
#bucket p {
  color: #FFFFFF;
  font-weight: bold;
  margin: 0;
  text-align: center;
  margin-top: 120px;
}
.btn {
  display: inline-block;
  margin-bottom: 0;
  line-height: 20px;
  color: #333333;
  text-align: center;
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  vertical-align: middle;
  cursor: pointer;
  border: 1px solid #cccccc;
  border-bottom-color: #b3b3b3;
  padding: 11px 19px;
  font-size: 17.5px;
  border-radius: 6px;
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  background-color: hsl(214, 37%, 28%) !important;
  background-repeat: repeat-x;
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #7a99c1), color-stop(100%, #2c4361));
  background-image: -webkit-linear-gradient(top, #7a99c1, #2c4361);
  background-image: linear-gradient(#7a99c1, #2c4361);
  border-color: #2c4361 #2c4361 hsl(214, 37%, 19.5%);
  color: #fff !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.56);
  -webkit-font-smoothing: antialiased;
}
.btn:hover,
.btn:focus,
.btn:active,
.btn.active,
.btn.disabled,
.btn[disabled] {
  color: #333333;
  background-color: #e6e6e6;
  *background-color: #d9d9d9;
}
.btn:hover,
.btn:focus {
  color: #333333;
  text-decoration: none;
  background-position: 0 -15px;
  -webkit-transition: background-position 0.1s linear;
  transition: background-position 0.1s linear;
}

/* Modal overlays */
.help_overlay {
  display: none;
}
.ui-widget-overlay {
  opacity: .8;
}
.no-close .ui-dialog-titlebar-close {
  display: none;
}
.help_overlay ul li {
  list-style-type: none;
  height: 40px;
  padding-left: 40px;
}
.help_overlay ul li.dots {
  background: url('../media/images/numbers/1.png') no-repeat left top;
  background-size: 30px 30px;
}
.help_overlay ul li.lines {
  background: url('../media/images/numbers/5.png') no-repeat left top;
  background-size: 30px 30px;
}
.help_overlay ul li.six {
  background: url('../media/images/numbers/6.png') no-repeat left top;
  background-size: 30px 30px;
}

